--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env mode=development",
+    "start": "webpack server --env mode=development",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production"
   },
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^2.8.1",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
