--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.5",
+    "@types/uuid": "^9.0.8",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^7.0.0",
@@ -29,6 +30,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "progress-webpack-plugin": "^1.0.16"
+    "progress-webpack-plugin": "^1.0.16",
+    "uuid": "^9.0.1"
   }
 }
