--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "flatted": "^3.3.1",
     "progress-webpack-plugin": "^1.0.16",
     "uuid": "^9.0.1"
   }
